invoice dto updated