@@ -1,17 +1,21 @@
 package com.cydeo.service.impl;
 
+
 import com.cydeo.dto.CompanyDto;
 import com.cydeo.entity.Company;
+
+
 import com.cydeo.repository.CompanyRepository;
 import com.cydeo.service.CompanyService;
 import com.cydeo.util.MapperUtil;
-import org.springframework.stereotype.Component;
+import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
-@Component
+@Service
+
 public class CompanyServiceImpl implements CompanyService {
-
     private final CompanyRepository companyRepository;
     private final MapperUtil mapperUtil;
 
@@ -20,14 +24,19 @@ public class CompanyServiceImpl implements CompanyService {
         this.mapperUtil = mapperUtil;
     }
 
+
     @Override
     public List<CompanyDto> listAllCompanies() {
-         List<Company> companyList= companyRepository.findAll();
-        return companyList.stream().map(p->mapperUtil.convert(p, new CompanyDto())).toList();
+        List<Company> companies = companyRepository.findAllCompanyIdNot1();
+
+        return companies.stream()
+                .map(company -> mapperUtil.convert(company, new CompanyDto()))
+                .collect(Collectors.toList());
     }
 
     @Override
     public CompanyDto findById(Long id) {
         return mapperUtil.convert(companyRepository.findById(id), new CompanyDto());
+
     }
 }
